SET client_encoding TO 'UTF8';   -- файл в UTF-8; строка защищает от авто-WIN1252 на Windows
-- =====================================================================
-- КАНОНИЧЕСКАЯ СХЕМА БД  (единый источник правды)
-- Проект: «Перекус» — доставка еды (маркетплейс)
-- Версия: v4 (каноническая, проверена на PostgreSQL 18.3/18.4). Schema freeze — правит только Роль 1.
--   v2 (2026-06-10, правки аудита, одобрены командой):
--     * составной FK «категория блюда — из того же ресторана» (menu_item → menu_category);
--     * CHECK: percent-скидка промокода не может превышать 100.
--   v3 (2026-06-10, решения команды по развилкам аудита):
--     * О13 декларативно: составной FK «адрес доставки — клиента заказа» (decisions.md №8);
--     * новая сущность order_review — отзыв 0..1 к заказу, покрывает ФТ-12 (decisions.md №9).
--   v4 (2026-06-12, по замечаниям независимой верификации 2-й моделью, раздел 14):
--     * Z3: payment.restaurant_id + 2 составных FK — О24 («способ оплаты принимается
--       рестораном») теперь декларативно, в т.ч. для записи в обход T1;
--     * Z4: CHECK-инварианты времени и статусов заказа (О22/О23 частично декларативно).
-- Применение: psql -d perekus -f schema.sql
-- =====================================================================

-- --- чистый старт (удобно при пересборке) ----------------------------
DROP TABLE IF EXISTS order_review, payment, order_item, customer_order, promo_code,
    menu_item, menu_category, restaurant_payment_method, restaurant_cuisine,
    cuisine, restaurant, address, courier, customer CASCADE;
DROP TYPE IF EXISTS order_status, payment_method, payment_status, discount_type CASCADE;

-- ---------------------------------------------------------------------
-- 0. Перечислимые типы
-- ---------------------------------------------------------------------
CREATE TYPE order_status   AS ENUM ('created','paid','cooking','on_the_way','delivered','cancelled');
CREATE TYPE payment_method AS ENUM ('card','cash','sbp');
CREATE TYPE payment_status AS ENUM ('pending','paid','refunded');
CREATE TYPE discount_type  AS ENUM ('percent','fixed');

-- ---------------------------------------------------------------------
-- 1. Клиенты и адреса
-- ---------------------------------------------------------------------
CREATE TABLE customer (
    customer_id  BIGSERIAL PRIMARY KEY,
    full_name    TEXT        NOT NULL,
    phone        TEXT        NOT NULL UNIQUE,
    email        TEXT,
    created_at   TIMESTAMPTZ NOT NULL DEFAULT now()
);

CREATE TABLE address (
    address_id   BIGSERIAL PRIMARY KEY,
    customer_id  BIGINT NOT NULL REFERENCES customer(customer_id) ON DELETE CASCADE,
    city         TEXT NOT NULL,
    street       TEXT NOT NULL,
    building     TEXT NOT NULL,
    apartment    TEXT,
    comment      TEXT,
    -- нужно для составного FK из customer_order (О13 «адрес — клиента заказа», v3)
    UNIQUE (address_id, customer_id)
);

-- ---------------------------------------------------------------------
-- 2. Рестораны, кухни, принимаемые способы оплаты (4НФ-разнесение)
-- ---------------------------------------------------------------------
CREATE TABLE restaurant (
    restaurant_id BIGSERIAL PRIMARY KEY,
    name          TEXT NOT NULL,
    phone         TEXT NOT NULL,
    address_text  TEXT NOT NULL,
    is_active     BOOLEAN NOT NULL DEFAULT true
);

CREATE TABLE cuisine (
    cuisine_id  SERIAL PRIMARY KEY,
    name        TEXT NOT NULL UNIQUE          -- «Итальянская», «Японская» …
);

-- независимый многозначный факт №1: какие кухни у ресторана
CREATE TABLE restaurant_cuisine (
    restaurant_id BIGINT NOT NULL REFERENCES restaurant(restaurant_id) ON DELETE CASCADE,
    cuisine_id    INT    NOT NULL REFERENCES cuisine(cuisine_id),
    PRIMARY KEY (restaurant_id, cuisine_id)
);

-- независимый многозначный факт №2: какие способы оплаты принимает ресторан
CREATE TABLE restaurant_payment_method (
    restaurant_id BIGINT         NOT NULL REFERENCES restaurant(restaurant_id) ON DELETE CASCADE,
    method        payment_method NOT NULL,
    PRIMARY KEY (restaurant_id, method)
);

-- ---------------------------------------------------------------------
-- 3. Меню
-- ---------------------------------------------------------------------
CREATE TABLE menu_category (
    category_id   BIGSERIAL PRIMARY KEY,
    restaurant_id BIGINT NOT NULL REFERENCES restaurant(restaurant_id) ON DELETE CASCADE,
    name          TEXT NOT NULL,
    UNIQUE (restaurant_id, name),
    -- нужно для составного FK из menu_item (ограничение «категория того же ресторана», v2)
    UNIQUE (category_id, restaurant_id)
);

CREATE TABLE menu_item (
    item_id       BIGSERIAL PRIMARY KEY,
    restaurant_id BIGINT NOT NULL REFERENCES restaurant(restaurant_id) ON DELETE CASCADE,
    category_id   BIGINT NOT NULL,
    name          TEXT NOT NULL,
    description   TEXT,
    price         NUMERIC(10,2) NOT NULL CHECK (price >= 0),   -- ТЕКУЩАЯ цена
    is_available  BOOLEAN NOT NULL DEFAULT true,
    -- нужно для составного FK из order_item (ограничение «позиции того же ресторана»)
    UNIQUE (item_id, restaurant_id),
    -- категория блюда — из того же ресторана (v2; закрывает дыру из аудита 2026-06-10:
    -- раньше блюдо могло ссылаться на категорию ЧУЖОГО ресторана)
    FOREIGN KEY (category_id, restaurant_id) REFERENCES menu_category (category_id, restaurant_id)
);

-- ---------------------------------------------------------------------
-- 4. Курьеры и промокоды
-- ---------------------------------------------------------------------
CREATE TABLE courier (
    courier_id   BIGSERIAL PRIMARY KEY,
    full_name    TEXT NOT NULL,
    phone        TEXT NOT NULL UNIQUE,
    vehicle_type TEXT,
    is_active    BOOLEAN NOT NULL DEFAULT true
);

CREATE TABLE promo_code (
    promo_id         BIGSERIAL PRIMARY KEY,
    code             TEXT NOT NULL UNIQUE,
    discount_type    discount_type NOT NULL,
    discount_value   NUMERIC(10,2) NOT NULL CHECK (discount_value >= 0),
    min_order_amount NUMERIC(10,2) NOT NULL DEFAULT 0,
    valid_from       DATE NOT NULL,
    valid_to         DATE NOT NULL,
    CHECK (valid_to >= valid_from),
    -- percent-скидка не может превышать 100 % (v2; дыра из аудита 2026-06-10:
    -- раньше вставлялся промокод со скидкой 150 %)
    CHECK (discount_type <> 'percent' OR discount_value <= 100)
);

-- ---------------------------------------------------------------------
-- 5. Заказы
-- ---------------------------------------------------------------------
CREATE TABLE customer_order (
    order_id      BIGSERIAL PRIMARY KEY,
    customer_id   BIGINT NOT NULL REFERENCES customer(customer_id),
    restaurant_id BIGINT NOT NULL REFERENCES restaurant(restaurant_id),
    address_id    BIGINT NOT NULL,
    courier_id    BIGINT REFERENCES courier(courier_id),       -- NULL до назначения
    promo_id      BIGINT REFERENCES promo_code(promo_id),      -- NULL если без промокода
    status        order_status NOT NULL DEFAULT 'created',
    created_at    TIMESTAMPTZ NOT NULL DEFAULT now(),
    paid_at       TIMESTAMPTZ,
    delivered_at  TIMESTAMPTZ,
    -- нужно как цель составного FK из order_item
    UNIQUE (order_id, restaurant_id),
    -- адрес доставки принадлежит клиенту ЭТОГО заказа (О13, v3 — декларативно;
    -- закрывает дыру из аудита 2026-06-10: раньше проходил адрес чужого клиента)
    FOREIGN KEY (address_id, customer_id) REFERENCES address (address_id, customer_id),
    -- v4 (Z4 рецензента): порядок меток времени и согласованность статусов с метками (О22/О23)
    CONSTRAINT chk_order_time_flow CHECK (
        (paid_at IS NULL OR paid_at >= created_at) AND
        (delivered_at IS NULL OR (paid_at IS NOT NULL AND delivered_at >= paid_at))
    ),
    CONSTRAINT chk_order_status_time CHECK (
        (status <> 'created' OR paid_at IS NULL) AND
        (status NOT IN ('paid','cooking','on_the_way','delivered') OR paid_at IS NOT NULL) AND
        (status <> 'delivered' OR delivered_at IS NOT NULL) AND
        (status = 'delivered' OR delivered_at IS NULL)
    ),
    CONSTRAINT chk_order_courier_status CHECK (
        courier_id IS NULL OR status IN ('paid','cooking','on_the_way','delivered')
    )
);

CREATE TABLE order_item (
    order_id      BIGINT NOT NULL,
    item_id       BIGINT NOT NULL,
    restaurant_id BIGINT NOT NULL,
    quantity      INT NOT NULL CHECK (quantity > 0),
    unit_price    NUMERIC(10,2) NOT NULL CHECK (unit_price >= 0),  -- СНИМОК цены на момент заказа
    PRIMARY KEY (order_id, item_id),
    -- позиция принадлежит этому заказу:
    FOREIGN KEY (order_id, restaurant_id) REFERENCES customer_order(order_id, restaurant_id) ON DELETE CASCADE,
    -- ...и блюдо — из ресторана этого заказа (декларативно реализует ограничение О12 из раздела 6):
    FOREIGN KEY (item_id, restaurant_id)  REFERENCES menu_item(item_id, restaurant_id)
);

CREATE TABLE payment (
    payment_id    BIGSERIAL PRIMARY KEY,
    order_id      BIGINT NOT NULL UNIQUE,             -- 1:1 к заказу (О9)
    -- v4 (Z3 рецензента): контролируемая избыточность ради двух составных FK ниже —
    -- тот же приём, что в order_item; значение всегда = ресторану заказа (FK №1)
    restaurant_id BIGINT NOT NULL,
    amount        NUMERIC(10,2) NOT NULL CHECK (amount >= 0),
    method        payment_method NOT NULL,
    status        payment_status NOT NULL DEFAULT 'pending',
    paid_at       TIMESTAMPTZ,
    -- статус оплаты согласован с меткой времени: pending ⇔ нет paid_at, paid/refunded ⇔ есть
    CONSTRAINT chk_payment_paid_at CHECK (
        (status = 'pending' AND paid_at IS NULL) OR
        (status IN ('paid','refunded') AND paid_at IS NOT NULL)
    ),
    -- FK №1: оплата принадлежит заказу, и ресторан совпадает с рестораном заказа
    FOREIGN KEY (order_id, restaurant_id)
        REFERENCES customer_order(order_id, restaurant_id) ON DELETE CASCADE,
    -- FK №2 (О24): выбранный способ оплаты входит в принимаемые этим рестораном
    -- (декларативно, в т.ч. при записи в обход T1; RESTRICT защищает от отключения
    --  способа оплаты, по которому уже есть платежи)
    FOREIGN KEY (restaurant_id, method)
        REFERENCES restaurant_payment_method(restaurant_id, method)
);

-- отзыв клиента о выполненном заказе: 0..1 к заказу (ФТ-12; v3, decisions.md №9).
-- «Только на доставленный заказ и только клиентом заказа» — процедурно (О26, Q13).
CREATE TABLE order_review (
    review_id         BIGSERIAL PRIMARY KEY,
    order_id          BIGINT NOT NULL UNIQUE REFERENCES customer_order(order_id) ON DELETE CASCADE,
    restaurant_rating SMALLINT NOT NULL CHECK (restaurant_rating BETWEEN 1 AND 5),
    courier_rating    SMALLINT CHECK (courier_rating BETWEEN 1 AND 5),  -- NULL: курьера можно не оценивать
    comment           TEXT,
    created_at        TIMESTAMPTZ NOT NULL DEFAULT now()
);

-- ---------------------------------------------------------------------
-- 6. Индексы под частые/аналитические запросы (раздел 4 НФТ, рубрика №7)
-- ---------------------------------------------------------------------
CREATE INDEX idx_order_customer    ON customer_order (customer_id);
CREATE INDEX idx_order_restaurant  ON customer_order (restaurant_id);
CREATE INDEX idx_order_courier     ON customer_order (courier_id);
CREATE INDEX idx_order_created     ON customer_order (created_at);
CREATE INDEX idx_orderitem_item    ON order_item (item_id);
CREATE INDEX idx_menuitem_rest_cat ON menu_item (restaurant_id, category_id);
CREATE INDEX idx_address_customer  ON address (customer_id);
-- Частичный индекс под Q12 (доля отмен): статус низкоселективен — обычный индекс
-- по нему планировщик игнорирует (Seq Scan), а частичный по редкому 'cancelled'
-- мал и реально ускоряет фильтр (по замечанию Z10 рецензии, раздел 14 / НФТ).
CREATE INDEX idx_order_cancelled   ON customer_order (restaurant_id) WHERE status = 'cancelled';
